Bug 42312 - HTMLTreeBuilder shouldn't crash during fast/parser/remove-parser-current-node.html
Summary: HTMLTreeBuilder shouldn't crash during fast/parser/remove-parser-current-node...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: New Bugs (show other bugs)
Version: 528+ (Nightly build)
Hardware: Other OS X 10.5
: P2 Normal
Assignee: Adam Barth
URL:
Keywords:
Depends on:
Blocks: 41123
  Show dependency treegraph
 
Reported: 2010-07-14 19:34 PDT by Adam Barth
Modified: 2010-07-14 19:40 PDT (History)
1 user (show)

See Also:


Attachments
Patch (2.34 KB, patch)
2010-07-14 19:36 PDT, Adam Barth
eric: review+
eric: commit-queue+
Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Adam Barth 2010-07-14 19:34:48 PDT
HTMLTreeBuilder shouldn't crash during fast/parser/remove-parser-current-node.html
Comment 1 Adam Barth 2010-07-14 19:36:47 PDT
Created attachment 61598 [details]
Patch
Comment 2 Adam Barth 2010-07-14 19:40:32 PDT
Committed r63393: <http://trac.webkit.org/changeset/63393>